refactor: Entity to Dto 형태 Builder 패턴 전환 Entity에서 Dto를 만드는 생성자 대신 Dto에서 Builder패턴으로 Entity를 활용하여 만드는 방식으로 전환했습니다.